copied RepoListItem style in style folder, imported through bootstrap.less; a bug in the build system breaks the build when a CSS file is required, but it doesn't break if added while webpack is in watch mode

--- a/src/styles/bootstrap.less
+++ b/src/styles/bootstrap.less
@@ -52,3 +52,6 @@
 // Utility classes
 @import "utilities.less";
 @import "../../node_modules/bootstrap/less/responsive-utilities.less";
+
+// My Components
+@import "custom/repolistitem.less";
