--- a/src/components/layout/RepoListItem.css
+++ b/src/components/layout/RepoListItem.css
@@ -1,3 +1,11 @@
+/*
+ * Popular Repositories
+ * Copyright (c) 2014 Alberto Congiu (@4lbertoC)
+ *
+ * This source code is licensed under the MIT license found in the
+ * LICENSE.txt file in the root directory of this source tree.
+ */
+
 .repo-list-item > .badge > .badge-text {
 	margin-left: 5px;
 }
