changed a bit the style of the pages

--- a/src/styles/bootstrap.less
+++ b/src/styles/bootstrap.less
@@ -54,6 +54,8 @@
 @import "../../node_modules/bootstrap/less/responsive-utilities.less";
 
 // My Components
+@import "custom/page.less";
+@import "custom/repopage.less";
 @import "custom/repolist.less";
 @import "custom/repolistitem.less";
 @import "custom/userinfo.less";
