--- a/src/styles/bootstrap.less
+++ b/src/styles/bootstrap.less
@@ -59,3 +59,4 @@
 @import "custom/repolist.less";
 @import "custom/repolistitem.less";
 @import "custom/userinfo.less";
+@import "custom/languagelist.less";
