--- a/src/styles/custom/languagelist.less
+++ b/src/styles/custom/languagelist.less
@@ -2,7 +2,7 @@
 // LanguageList
 // =============================================================================
 
-.language-list .language {
+.language-list > .language {
 	width: 33.33%;
 	display: inline-block;
 }
