minor fixes to Repo page's badges style

--- a/src/styles/custom/repopage.less
+++ b/src/styles/custom/repopage.less
@@ -2,6 +2,9 @@
 // RepoListItem
 // =============================================================================
 
-.repo-page .jumbotron .badge {
+.repo-badge {
 	margin: 5px;
+}
+.repo-badge-text {
+	margin-left: 5px;
 }
