changed colors to green

--- a/src/styles/custom/page.less
+++ b/src/styles/custom/page.less
@@ -5,3 +5,9 @@
 .page {
 	padding-top: 25px;
 }
+
+.page a, .page a:hover, .page a:focus {
+	color: #9DA395;
+	text-decoration: none;
+	font-family: 'OpenSans-Bold';
+}
