--- a/src/styles/custom/repopage.less
+++ b/src/styles/custom/repopage.less
@@ -4,7 +4,14 @@
 
 .repo-badge {
 	margin: 5px;
+	background: #F9F9F9;
+	color: #88A959;
 }
+
 .repo-badge-text {
 	margin-left: 5px;
+}
+
+.repo-page > .well {
+	background-color: #F3F3ED;
 }
