--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -7,12 +7,15 @@
 body {
   padding: @navbar-height 0;
   overflow-y: scroll;
+  font-family: 'OpenSans';
 }
 
 .navbar-top {
   &:extend(.navbar);
   &:extend(.navbar-inverse);
   &:extend(.navbar-fixed-top);
+  background-color: #96B763;
+  border-bottom: #96B763;
 }
 
 .navbar-brand {
