--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -19,7 +19,25 @@
 // Jumbotron
 // -----------------------------------------------------------------------------
 
-@jumbotron-heading-color: #61DAFB;
+@jumbotron-heading-color: #F9F9F9;
 @jumbotron-color: #E9E9E9;
-@jumbotron-bg: #2d2d2d;
+@jumbotron-bg: #88A959;
 @jumbotron-font-size: @font-size-base;
+
+//
+// Fonts
+// -----------------------------------------------------------------------------
+
+@font-face {
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'OpenSans-Bold';
+    src: url('../fonts/OpenSans-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
