added font-awesome; replaced cutlery icon with proper code fork icon; replaced navbar icon with github head

--- a/src/styles/bootstrap.less
+++ b/src/styles/bootstrap.less
@@ -30,6 +30,7 @@
 @import "../../node_modules/bootstrap/less/breadcrumbs.less";
 @import "../../node_modules/bootstrap/less/pagination.less";
 @import "../../node_modules/bootstrap/less/pager.less";
+@import "../../node_modules/bootstrap/less/jumbotron.less";
 @import "../../node_modules/bootstrap/less/labels.less";
 @import "../../node_modules/bootstrap/less/badges.less";
 @import "../../node_modules/bootstrap/less/thumbnails.less";
@@ -52,10 +53,14 @@
 @import "utilities.less";
 @import "../../node_modules/bootstrap/less/responsive-utilities.less";
 
+// Font Awesome
+@import "../../node_modules/font-awesome/less/font-awesome.less";
+
 // My Components
 @import "custom/page.less";
 @import "custom/repopage.less";
 @import "custom/repolist.less";
 @import "custom/repolistitem.less";
+@import "custom/repobadge.less";
 @import "custom/userinfo.less";
 @import "custom/languagelist.less";
