--- a/src/styles/custom/repolistitem.less
+++ b/src/styles/custom/repolistitem.less
@@ -2,16 +2,11 @@
 // RepoListItem
 // =============================================================================
 
-.repo-list-item > .badge {
-	background: transparent;
-	color: #C9C9C3;
-}
+.repo-list-item {
 
-.repo-list-item > .badge > .badge-text {
-	margin-left: 5px;
-}
-
-.repo-name {
-	font-family: 'OpenSans-Bold';
-	color: #5B5B43;
+	.repo-name {
+		font-family: 'OpenSans-Bold';
+		color: #5B5B43;
+	}
+	
 }
