--- a/src/styles/custom/repopage.less
+++ b/src/styles/custom/repopage.less
@@ -1,17 +1,11 @@
 // =============================================================================
-// RepoListItem
+// RepoPage
 // =============================================================================
 
-.repo-badge {
-	margin: 5px;
-	background: #F9F9F9;
-	color: #88A959;
-}
+.repo-page {
 
-.repo-badge-text {
-	margin-left: 5px;
-}
-
-.repo-page > .well {
-	background-color: #F3F3ED;
+	.well {
+		background-color: #F3F3ED;
+	}
+	
 }
