--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -29,3 +29,15 @@ body {
     display: inline;
   }
 }
+
+.navbar-title {
+  vertical-align: middle;
+}
+
+.navbar-icon {
+  margin-right: 10px;
+}
+
+.navbar-container {
+  background-color: #88A559;
+}
