added RepoBadgeList component

--- a/src/styles/bootstrap.less
+++ b/src/styles/bootstrap.less
@@ -61,6 +61,6 @@
 @import "custom/repopage.less";
 @import "custom/repolist.less";
 @import "custom/repolistitem.less";
-@import "custom/repobadge.less";
+@import "custom/repobadgelist.less";
 @import "custom/userinfo.less";
 @import "custom/languagelist.less";
