--- a/src/styles/bootstrap.less
+++ b/src/styles/bootstrap.less
@@ -22,6 +22,8 @@
 
 // Components
 @import "../../node_modules/bootstrap/less/component-animations.less";
+@import "../../node_modules/bootstrap/less/buttons.less";
+@import "../../node_modules/bootstrap/less/alert.less";
 @import "../../node_modules/bootstrap/less/dropdowns.less";
 @import "../../node_modules/bootstrap/less/button-groups.less";
 @import "../../node_modules/bootstrap/less/input-groups.less";
