added ErrorAlert component. Now all GitHub service methods accept an error callback, which will be called when the service returns an error. Added GitHubError model to the GitHubStore, so that other components can react to errors. Added tests

--- a/src/styles/custom/repolist.less
+++ b/src/styles/custom/repolist.less
@@ -2,7 +2,7 @@
 // RepoListItem
 // =============================================================================
 
-.repolist-loading {
+.repo-list-loading {
 	width: 100%;
 	text-align: center;
 	margin-top: 10px;
